The third technique of matching was developed

--- a/data_extraction/data_extraction.ipynb
+++ b/data_extraction/data_extraction.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4                           †  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "4  Allison        Master Hudson Trevor  11m       1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "4      0      0        S  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "4      0        S      allen  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "623  Alhomäki  Mr Ilmari Rudolf  19       3"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "621  Al-Munà  Mr Far īd Husayn Qāsim  18       3"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "197   marvin      mr daniel warner  18.0       1"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
        "404  oreskovic  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
        "4                           mr. thomas jr    male      0      0        S  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
        "(481, 10)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1660,7 @@
        "4        S  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
        "4      0      0        S      allen  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "[410 rows x 8 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2098,7 @@
        "14  barkworth        mr algernon henry  47.0       1"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2232,7 @@
        "(252, 14)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2403,7 @@
        "4      1        S   beckwith        True  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2609,7 @@
        "4        S  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2620,7 +2620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2786,7 +2786,7 @@
        "4      1        S   beckwith        True  47.0  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2797,7 +2797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2814,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2854,6 +2854,211 @@
    ],
    "source": [
     "matched_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Third way to match (insert special cases)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "special cases were searched manually, in order to obtain 90% of the data, sixty-three passenger data were searched"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the data sought is in missing_data_found.csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COLUMNS=[\"Survived\",\"Sex\",\"Name\",\"Age\",\"SibSp\",\"Parch\",\"Pclass\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the following lines were commented in order to obtain the data that was not paired in\n",
+    "# technique one and two, in order to search 63 data manually\n",
+    "# unmatched_data=csv_df[~csv_df[\"Name\"].isin(matched_data[\"Name\"])]\n",
+    "# unmatched_data[\"Name\"]=unmatched_data[\"Name\"].str.title()\n",
+    "# unmatched_data[COLUMNS[:-1]].to_csv(\"unmatched_data.csv\",index=False)\n",
+    "# unmatched_data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Names are capitalized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_data[\"Name\"]=matched_data[\"Name\"].str.title()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_matched_manually=pd.read_csv(\"missing_data_found.csv\")\n",
+    "matched_data=pd.concat([matched_data[COLUMNS],data_matched_manually])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Pclass</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Anderson, Mr. Harry</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Andrews, Miss. Kornelia Theodosia</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Barkworth, Mr. Algernon Henry Wilson</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Baumann, Mr. John D</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Beckwith, Mrs. Richard Leonard (Sallie Monypeny)</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived     Sex                                              Name   Age  \\\n",
+       "0         1    male                               Anderson, Mr. Harry  48.0   \n",
+       "1         1  female                 Andrews, Miss. Kornelia Theodosia  63.0   \n",
+       "2         1    male              Barkworth, Mr. Algernon Henry Wilson  80.0   \n",
+       "3         0    male                               Baumann, Mr. John D  60.0   \n",
+       "4         1  female  Beckwith, Mrs. Richard Leonard (Sallie Monypeny)  47.0   \n",
+       "\n",
+       "   SibSp  Parch  Pclass  \n",
+       "0      0      0       1  \n",
+       "1      1      0       1  \n",
+       "2      0      0       1  \n",
+       "3      0      0       1  \n",
+       "4      1      1       1  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matched_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(800, 7)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matched_data.shape"
    ]
   }
  ],
