The clean data is saved

--- a/data_extraction/data_extraction.ipynb
+++ b/data_extraction/data_extraction.ipynb
@@ -3060,6 +3060,23 @@
    "source": [
     "matched_data.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the clean data is saved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "matched_data[COLUMNS].to_csv(\"titanic.csv\",index=False) \n"
+   ]
   }
  ],
  "metadata": {
