The copyrights were added

--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -814,6 +814,19 @@
    "source": [
     "We can observe that if the # of child/parents is 0, it is most likely that he came alone, that is, he did not come with his brothers or sisters. Taking this into account, there is a relationship between the #of children/parents and the #of siblings/wife."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All Rights Reserved\n",
+    "\n",
+    "All rights to this project are reserved. No part of this work may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the creator, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law.\n",
+    "\n",
+    "For permission requests, please contact [sebastianbeller76@gmail.com](mailto:sebastianbeller76@gmail.com)\n",
+    "\n",
+    "Copyright © 2024 Sebastian Beller.\n"
+   ]
   }
  ],
  "metadata": {
