--- a/data_extraction/data_extraction.ipynb
+++ b/data_extraction/data_extraction.ipynb
@@ -3077,6 +3077,19 @@
     "\n",
     "matched_data[COLUMNS].to_csv(\"titanic.csv\",index=False) \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All Rights Reserved\n",
+    "\n",
+    "All rights to this project are reserved. No part of this work may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the creator, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law.\n",
+    "\n",
+    "For permission requests, please contact [sebastianbeller76@gmail.com](mailto:sebastianbeller76@gmail.com)\n",
+    "\n",
+    "Copyright © 2024 Sebastian Beller.\n"
+   ]
   }
  ],
  "metadata": {
