The copyrigths were updated

--- a/data_extraction/data_extraction.ipynb
+++ b/data_extraction/data_extraction.ipynb
@@ -3082,13 +3082,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# All Rights Reserved\n",
+    "# Creative Commons License\n",
     "\n",
-    "All rights to this project are reserved. No part of this work may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the creator, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law.\n",
+    "This project is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International](https://creativecommons.org/licenses/by-nc/4.0/) license.\n",
     "\n",
-    "For permission requests, please contact [sebastianbeller76@gmail.com](mailto:sebastianbeller76@gmail.com)\n",
+    "![CC BY-NC 4.0](https://licensebuttons.net/l/by-nc/4.0/88x31.png)\n",
     "\n",
-    "Copyright © 2024 Sebastian Beller.\n"
+    "## License Summary\n",
+    "\n",
+    "### You are free to:\n",
+    "- **Share** — copy and redistribute the material in any medium or format.\n",
+    "- **Adapt** — remix, transform, and build upon the material.\n",
+    "\n",
+    "Under the following terms:\n",
+    "### Conditions:\n",
+    "- **Attribution** — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.\n",
+    "\n",
+    "- **NonCommercial** — You may not use the material for commercial purposes.\n"
    ]
   }
  ],
