--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4      1      1       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "<Axes: title={'center': \"Box plot of the variable 'Age'\"}>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "0.67"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "Text(0.5, 1.0, 'Age and Survived')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -779,16 +779,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x141b2aec9d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x141b2f3c9d0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1053,6 +1053,146 @@
    "metadata": {},
    "source": [
     "It is observed that the proportion of people who survived and were alone is higher than the proportion of those who survived and were accompanied."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection of input variables for the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because age does not have a relationship to our response variable, we do not consider it as of now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We eliminate the name because it does not make sense that the name has an influence on the response variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We eliminate the variables SibSp and Parch, since there is a variable that better explains their influence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_passengers.drop(labels=[\"Age\",\"Name\",\"SibSp\",\"Parch\"],inplace=True,axis=\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>TitleAbreviation</th>\n",
+       "      <th>came_alone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived     Sex  Pclass TitleAbreviation  came_alone\n",
+       "0         1    male       1               Mr        True\n",
+       "1         1  female       1             Miss        True\n",
+       "2         1    male       1               Mr        True\n",
+       "3         0    male       1               Mr        True\n",
+       "4         1  female       1              Mrs       False"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_passengers.head()"
    ]
   },
   {
