--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4      1      1       1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "<Axes: title={'center': \"Box plot of the variable 'Age'\"}>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "0.67"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "Text(0.5, 1.0, 'Age and Survived')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -779,16 +779,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x141b2f3c9d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x141b4ac76d0>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1186,13 +1186,62 @@
        "4         1  female       1              Mrs       False"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_passengers.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We converted the categorical data to numerical data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_variables=[\"Sex\", \"TitleAbreviation\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "encoder = OrdinalEncoder()\n",
+    "df_passengers[categorical_variables] = encoder.fit_transform(df_passengers[categorical_variables]).astype(int)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['female', 'male'], dtype=object),\n",
+       " array(['Master', 'Miss', 'Mr', 'Mrs', 'Other'], dtype=object)]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.categories_"
    ]
   },
   {
