The memory optimization was performed before the training

--- a/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
+++ b/EDA_&_prediction/data_analysis_and_prediction_fin.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4      1      1       1  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "<Axes: title={'center': \"Box plot of the variable 'Age'\"}>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "0.67"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "Text(0.5, 1.0, 'Age and Survived')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "<Axes: title={'center': 'Age'}, xlabel='Survived'>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -779,16 +779,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x141b4ac76d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x141b66749d0>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "4         1  female       1              Mrs       False"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1235,13 +1235,129 @@
        " array(['Master', 'Miss', 'Mr', 'Mrs', 'Other'], dtype=object)]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "encoder.categories_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimization of memory usage for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 800 entries, 0 to 799\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column            Non-Null Count  Dtype\n",
+      "---  ------            --------------  -----\n",
+      " 0   Survived          800 non-null    int64\n",
+      " 1   Sex               800 non-null    int32\n",
+      " 2   Pclass            800 non-null    int64\n",
+      " 3   TitleAbreviation  800 non-null    int32\n",
+      " 4   came_alone        800 non-null    bool \n",
+      "dtypes: bool(1), int32(2), int64(2)\n",
+      "memory usage: 19.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_passengers.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived            2\n",
+       "Sex                 2\n",
+       "Pclass              3\n",
+       "TitleAbreviation    5\n",
+       "came_alone          2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_passengers.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_passengers[\"Survived\"]=df_passengers[\"Survived\"].apply(bool)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gender and class of the passage can be converted to categorical type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_passengers[\"Sex\"]=df_passengers[\"Sex\"].astype(\"category\")\n",
+    "df_passengers[\"Pclass\"]=df_passengers[\"Pclass\"].astype(\"category\")\n",
+    "df_passengers[\"TitleAbreviation\"]=df_passengers[\"TitleAbreviation\"].astype(\"category\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 800 entries, 0 to 799\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column            Non-Null Count  Dtype   \n",
+      "---  ------            --------------  -----   \n",
+      " 0   Survived          800 non-null    bool    \n",
+      " 1   Sex               800 non-null    category\n",
+      " 2   Pclass            800 non-null    category\n",
+      " 3   TitleAbreviation  800 non-null    category\n",
+      " 4   came_alone        800 non-null    bool    \n",
+      "dtypes: bool(2), category(3)\n",
+      "memory usage: 4.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_passengers.info()"
    ]
   },
   {
